# scopes

./: .envrc  .gitattributes  .gitignore  .hgignore  .hgtags  .readthedocs.yml  CMakeLists.txt  CREDITS.md  Cargo.toml  INSTALL.md  LICENSE.md  README.md  build.sh  flake.nix  genie.lua  notes.txt  rust-toolchain.toml
.eo/: eorc
doc/: Makefile  about.rst  architecture.rst  build_reference.sc  conf.py  cpp_users.rst  dataformat.rst  index.rst  intro.rst  make.bat  mkdocs.yml  module-Array.rst  module-Box.rst  module-Capture.rst  module-FunctionChain.rst  module-Map.rst  module-UTF-8.rst  module-core.rst  module-enum.rst  module-glm.rst  module-glsl.rst  module-itertools.rst  module-struct.rst  module-testing.rst  modules.rst  reference.rst  requirements.txt  scopes-ref.rst  scopesdomain.py  scopeslexer.py  scopesparser.py  tutorial.rst  update_docs
doc/ScopesLexer/: setup.py
doc/ScopesLexer/scopeslexer/: lexer.py
doc/docs/: about.md  architecture.md  capi.md  cpp_users.md  dataformat.md  extra.css  index.md  intro.md  ir-ref.md  lang.md  module-Array.md  module-Box.md  module-Capture.md  module-FunctionChain.md  module-Map.md  module-Option.md  module-Rc.md  module-Set.md  module-String.md  module-UTF-8.md  module-chaining.md  module-console.md  module-core.md  module-enum.md  module-format.md  module-glm.md  module-glsl.md  module-itertools.md  module-property.md  module-spicetools.md  module-struct.md  module-testing.md  modules.md  tutorial.md
extras/eo/: scopes-source.eo  scopes.eo
extras/vscode/scopes/: README.md  package.json  package_with_icons.json
extras/vscode/scopes/syntaxes/: scopes.tmLanguage.json
include/: scopes.h
include/scopes/: config.h  scopes.h
lib/scopes/: Array.sc  Box.sc  Capture.sc  FunctionChain.sc  Map.sc  MutableArray.sc  Option.sc  RC.sc  Rc.sc  Set.sc  String.sc  UTF-8.sc  cgen.sc  chaining.sc  console.sc  core.sc  docstring.sc  enum.sc  fnchain.sc  format.sc  glm.sc  glsl.sc  inspect.sc  itertools.sc  old_core.sc  property.sc  spicetools.sc  struct.sc  switcher.sc  testing.sc
lib/scopes/C/: socket.sc  stdio.sc  stdlib.sc  string.sc
nix/templates/minimal/: flake.nix
scopes/: Cargo.toml
scopes/src/: db.rs  ir.rs  main.rs  parser.rs  type_check.rs
src/: CMakeLists.txt  abi_aarch64.cpp  abi_windows_x64.cpp  abi_x86_64.cpp  alloc.hpp  anchor.cpp  anchor.hpp  any.cpp  any.hpp  argument.cpp  argument.hpp  arguments_type.cpp  arguments_type.hpp  array.cpp  array.hpp  array_type.cpp  array_type.hpp  ast.cpp  ast.hpp  ast_specializer.cpp  ast_specializer.hpp  body.cpp  body.hpp  boot.cpp  boot.hpp  builtin.cpp  builtin.hpp  c_import.cpp  c_import.hpp  cache.cpp  cache.hpp  closure.cpp  closure.hpp  compiler_flags.hpp  dyn_cast.inc  error.cpp  error.hpp  execution.cpp  execution.hpp  expander.cpp  (+157 more)
src/qualifier/: key_qualifier.cpp  key_qualifier.hpp  refer_qualifier.cpp  refer_qualifier.hpp  unique_qualifiers.cpp  unique_qualifiers.hpp
src/type/: arguments_type.cpp  arguments_type.hpp  array_type.cpp  array_type.hpp  function_type.cpp  function_type.hpp  image_type.cpp  image_type.hpp  integer_type.cpp  integer_type.hpp  matrix_type.cpp  matrix_type.hpp  pointer_type.cpp  pointer_type.hpp  qualify_type.cpp  qualify_type.hpp  real_type.cpp  real_type.hpp  sampledimage_type.cpp  sampledimage_type.hpp  sized_storage_type.cpp  sized_storage_type.hpp  tuple_type.cpp  tuple_type.hpp  typename_type.cpp  typename_type.hpp  union_type.cpp  union_type.hpp  vector_type.cpp  vector_type.hpp
src/win32/: basename.c  dirname.c  mman.c  mman.h  realpath.c  stdlib_ex.h  wininclude.h
testing/: iching.sc  index.html  makemain.sc  module.sc  module2.sc  quine.sc  test-custom-core  test_abi.sc  test_abs.sc  test_alignment.sc  test_all.sc  test_anchor.sc  test_and_or.sc  test_ansi_colors.sc  test_any.sc  test_array.sc  test_assorted.sc  test_ast_quote.sc  test_atomic.sc  test_bool.sc  test_borrowing.sc  test_box.sc  test_branch.sc  test_callback.sc  test_capture.sc  test_cgen.sc  test_clang.sc  test_closure.sc  test_codegen.sc  test_compile_object_to_buffer.sc  test_compile_to_buffer.sc  test_compile_wasm_to_memory.sc  test_conversion.sc  test_convert.sc  test_copy.sc  test_currying.sc  test_decorator.sc  test_defer.sc  test_dispatch.sc  test_docstring.sc  (+85 more)
testing/socket/: client.sc  server.sc
