[package]
name = "scopes"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.64"
derive-new = "0.5.9"
ordered-float = "3.0.0"
salsa = { git = "https://github.com/salsa-rs/salsa", package = "salsa-2022", version = "0.1.0" }
thiserror = "1.0.34"
tui = "0.19.0"

[dev-dependencies]
expect-test = "1.4.0"
